# simple_redfish

./: CMakeLists.txt  README.md
lib/libhttp/: CMakeLists.txt
lib/libhttp/src/: httplib_error_string.c  httplib_free_config_options.c
src/http/: CMakeLists.txt  http.c  http.h
src/r3/: CMakeLists.txt
src/r3/src/: CMakeLists.txt  Makefile  Makefile.in
src/r3/src/.deps/: edge.Plo  match_entry.Plo  token.Plo
src/redfish/: CMakeLists.txt  _gen_template.py  redfish_managers.c  redfish_root.c  redfish_systems.c
src/redfish/core/: CMakeLists.txt  root.c
src/redfish/core/AccountService/: node.c
src/redfish/core/AccountService/Accounts/: node.c  node_id.c
src/redfish/core/AccountService/ActiveDirectory/: node.c
src/redfish/core/AccountService/ExternalAccountProviders/: node.c  node_id.c
src/redfish/core/AccountService/LDAP/: node.c
src/redfish/core/AccountService/Roles/: node.c  node_id.c
src/redfish/core/AggregationService/: node.c
src/redfish/core/AggregationService/Aggregates/: actions.c  node.c  node_id.c
src/redfish/core/AggregationService/AggregationSources/: node.c  node_id.c
src/redfish/core/AggregationService/ConnectionMethods/: node.c  node_id.c
src/redfish/core/CertificateService/: node.c
src/redfish/core/CertificateService/CertificateLocations/: node.c
src/redfish/core/Chassis/: actions.c  node.c  node_id.c
src/redfish/core/Chassis/Assembly/: node.c
src/redfish/core/Chassis/Certificates/: actions.c  node.c  node_id.c
src/redfish/core/Chassis/Drives/: actions.c  node.c  node_id.c
src/redfish/core/Chassis/EnvironmentMetrics/: node.c
src/redfish/core/Chassis/LogServices/: actions.c  node.c  node_id.c
src/redfish/core/Chassis/MediaControllers/: actions.c  node.c  node_id.c
src/redfish/core/Chassis/Memory/: actions.c  node.c  node_id.c
src/redfish/core/Chassis/MemoryDomains/: node.c  node_id.c
src/redfish/core/Chassis/NetworkAdapters/: actions.c  node.c  node_id.c
src/redfish/core/Chassis/PCIeDevices/: node.c  node_id.c
src/redfish/core/Chassis/PCIeSlots/: node.c
src/redfish/core/Chassis/Power/: node.c
src/redfish/core/Chassis/PowerSubsystem/: node.c
src/redfish/core/Chassis/Sensors/: actions.c  node.c  node_id.c
src/redfish/core/Chassis/Thermal/: node.c
src/redfish/core/Chassis/ThermalSubsystem/: node.c
src/redfish/core/CompositionService/: node.c
src/redfish/core/CompositionService/ActivePool/: node.c
src/redfish/core/CompositionService/CompositionReservations/: node.c  node_id.c
src/redfish/core/CompositionService/FreePool/: node.c
src/redfish/core/CompositionService/ResourceBlocks/: node.c  node_id.c
src/redfish/core/CompositionService/ResourceZones/: actions.c  node.c  node_id.c
src/redfish/core/EventService/: node.c
src/redfish/core/EventService/Subscriptions/: actions.c  node.c  node_id.c
src/redfish/core/Fabrics/: node.c  node_id.c
src/redfish/core/Fabrics/AddressPools/: node.c  node_id.c
src/redfish/core/Fabrics/Connections/: node.c  node_id.c
src/redfish/core/Fabrics/EndpointGroups/: node.c  node_id.c
src/redfish/core/Fabrics/Endpoints/: node.c  node_id.c
src/redfish/core/Fabrics/Switches/: actions.c  node.c  node_id.c
src/redfish/core/Fabrics/Zones/: actions.c  node.c  node_id.c
src/redfish/core/Facilities/: node.c  node_id.c
src/redfish/core/Facilities/AmbientMetrics/: node.c
src/redfish/core/Facilities/EnvironmentMetrics/: node.c
src/redfish/core/Facilities/PowerDomains/: node.c  node_id.c
src/redfish/core/Facilities/Sensors/: node.c
src/redfish/core/JobService/: node.c
src/redfish/core/JobService/Jobs/: node.c  node_id.c
src/redfish/core/JobService/Log/: actions.c  node.c
src/redfish/core/JsonSchemas/: node.c  node_id.c
src/redfish/core/Managers/: actions.c  node.c  node_id.c
src/redfish/core/Managers/EthernetInterfaces/: node.c  node_id.c
src/redfish/core/Managers/HostInterfaces/: node.c  node_id.c
src/redfish/core/Managers/LogServices/: actions.c  node.c  node_id.c
src/redfish/core/Managers/NetworkProtocol/: node.c
src/redfish/core/Managers/RemoteAccountService/: node.c
src/redfish/core/Managers/SerialInterfaces/: node.c  node_id.c
src/redfish/core/Managers/USBPorts/: actions.c  node.c  node_id.c
src/redfish/core/Managers/VirtualMedia/: actions.c  node.c  node_id.c
src/redfish/core/PowerEquipment/: node.c
src/redfish/core/PowerEquipment/FloorPDUs/: actions.c  node.c  node_id.c
src/redfish/core/PowerEquipment/RackPDUs/: actions.c  node.c  node_id.c
src/redfish/core/PowerEquipment/Sensors/: actions.c  node.c  node_id.c
src/redfish/core/PowerEquipment/Switchgear/: node.c  node_id.c
src/redfish/core/PowerEquipment/TransferSwitches/: actions.c  node.c  node_id.c
src/redfish/core/Registries/: node.c  node_id.c
src/redfish/core/ResourceBlocks/: node.c  node_id.c
src/redfish/core/ResourceBlocks/Drives/: actions.c  node.c  node_id.c
src/redfish/core/ResourceBlocks/EthernetInterfaces/: node.c  node_id.c
src/redfish/core/ResourceBlocks/Memory/: actions.c  node.c  node_id.c
src/redfish/core/ResourceBlocks/NetworkInterfaces/: node.c  node_id.c
src/redfish/core/ResourceBlocks/Processors/: actions.c  node.c  node_id.c
src/redfish/core/ResourceBlocks/SimpleStorage/: node.c  node_id.c
src/redfish/core/ResourceBlocks/Storage/: actions.c  node.c  node_id.c
src/redfish/core/ResourceBlocks/Systems/: actions.c  node.c  node_id.c
src/redfish/core/SessionService/: node.c
src/redfish/core/SessionService/Sessions/: node.c  node_id.c
src/redfish/core/Storage/: actions.c  node.c  node_id.c
src/redfish/core/Storage/ConsistencyGroups/: node.c  node_id.c
src/redfish/core/StorageServices/: node.c  node_id.c
src/redfish/core/Systems/: actions.c  node.c  node_id.c
src/redfish/core/TaskService/: node.c
src/redfish/core/TelemetryService/: node.c
src/redfish/core/UpdateService/: node.c
src/redfish/schema/: _gen_template.py
src/rest/: CMakeLists.txt  rest_node.c  rest_node.h
src/util/: CMakeLists.txt
test/: CMakeLists.txt  test.c
test/http_server/: CMakeLists.txt  main.c
test/rest/: CMakeLists.txt  rest.c
(+1299 files in other folders)
