cmake_minimum_required(VERSION 3.0.0 FATAL_ERROR)

# Set up the project
project(libhttp
    VERSION 2.0.0
)

add_library(${PROJECT_NAME})
add_library("simple_redfish::${PROJECT_NAME}" ALIAS ${PROJECT_NAME})

target_link_libraries(${PROJECT_NAME} PUBLIC
    pthread
    dl
)

#aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/src _SRC)


target_sources(${PROJECT_NAME}
    PRIVATE
	${CMAKE_CURRENT_LIST_DIR}/src/extern_md5.c						
	${CMAKE_CURRENT_LIST_DIR}/src/extern_sha1.c						
	${CMAKE_CURRENT_LIST_DIR}/src/extern_ssl_lut.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_abort_start.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_accept_new_connection.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_addenv.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_atomic_dec.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_atomic_inc.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_authorize.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_base64_encode.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_check_acl.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_check_authorization.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_check_feature.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_check_password.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_close_all_listening_sockets.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_close_connection.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_close_socket_gracefully.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_closedir.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_compare_dir_entries.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_connect_client.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_connect_socket.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_connect_websocket_client.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_construct_etag.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_consume_socket.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_create_client_context.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_cry.c						
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_delete_file.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_destroy_client_context.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_difftimespec.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_dir_scan_callback.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_discard_unread_request_data.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_download.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_error_string.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_event_queue.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_fclose.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_fclose_on_exec.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_fgets.c						
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_fopen.c						
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_forward_body_data.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_free_config_options.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_free_context.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_get_builtin_mime_type.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_get_cookie.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_get_debug_level.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_get_first_ssl_listener_index.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_get_header.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_get_mime_type.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_get_option.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_get_random.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_get_rel_url_at_current_server.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_get_remote_ip.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_get_request_handler.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_get_request_info.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_get_request_len.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_get_response.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_get_response_code_text.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_get_server_ports.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_get_system_name.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_get_uri_type.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_get_user_connection_data.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_get_user_data.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_get_var.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_getreq.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_global_data.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_gmt_time_string.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_handle_cgi_request.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_handle_directory_request.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_handle_file_based_request.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_handle_form_request.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_handle_not_modified_static_file_request.c	
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_handle_propfind.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_handle_request.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_handle_static_file_request.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_handle_websocket_request.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_header_has_option.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_inet_pton.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_init_options.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_initialize_ssl.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_interpret_uri.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_is_authorized_for_put.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_is_file_in_memory.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_is_file_opened.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_is_not_modified.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_is_put_or_delete_method.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_is_valid_http_method.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_is_valid_port.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_is_websocket_protocol.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_process_options.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_pthread_join.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_kill.c						
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_load_dll.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_lock_unlock_connection.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_lock_unlock_context.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_log_access.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_lowercase.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_malloc.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_master_thread.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_match_prefix.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_md5.c						
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_mkcol.c						
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_mkdir.c						
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_modify_passwords_file.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_must_hide_file.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_next_option.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_open_auth_file.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_opendir.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_option_value_to_bool.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_option_value_to_int.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_parse_auth_header.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_parse_date_string.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_parse_http_headers.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_parse_http_message.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_parse_net.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_parse_range_header.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_path_to_unicode.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_poll.c						
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_prepare_cgi_environment.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_print_dir_entry.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_printf.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_process_new_connection.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_produce_socket.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_pull.c						
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_pull_all.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_push_all.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_put_dir.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_put_file.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_read.c						
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_read_auth_file.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_read_request.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_read_websocket.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_readdir.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_redirect_to_https_port.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_refresh_trust.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_remove.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_remove_bad_file.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_remove_directory.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_remove_double_dots.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_reset_per_request_attributes.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_scan_directory.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_send_authorization_request.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_send_file.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_send_file_data.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_send_http_error.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_send_no_cache_header.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_send_options.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_send_static_cache_header.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_send_websocket_handshake.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_set_acl_option.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_set_auth_handler.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_set_close_on_exec.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_set_debug_level.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_set_gpass_option.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_set_handler_type.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_set_non_blocking_mode.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_set_ports_option.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_set_request_handler.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_set_ssl_option.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_set_sock_timeout.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_set_tcp_nodelay.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_set_thread_name.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_set_throttle.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_set_uid_option.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_set_user_connection_data.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_set_websocket_handler.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_should_decode_url.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_should_keep_alive.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_skip.c						
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_skip_quoted.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_snprintf.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_sockaddr_to_string.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_spawn_process.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_ssi.c						
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_ssl_error.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_ssl_get_client_cert_info.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_ssl_get_protocol.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_ssl_id_callback.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_ssl_locking_callback.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_ssl_use_pem_file.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_sslize.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_start.c						
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_start_thread.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_start_thread_with_id.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_stat.c						
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_stop.c						
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_store_body.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_strcasecmp.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_strcasestr.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_strdup.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_strlcpy.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_strncasecmp.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_strndup.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_substitute_index_file.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_suggest_connection_header.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_system_exit.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_system_init.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_timer.c						
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_tls_dtor.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_uninitialize_ssl.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_url_decode.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_url_encode.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_version.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_vprintf.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_vsnprintf.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_websocket_client_thread.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_websocket_client_write.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_websocket_write.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_websocket_write_exec.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_worker_thread.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_write.c						
	${CMAKE_CURRENT_LIST_DIR}/src/osx_clock_gettime.c					
	${CMAKE_CURRENT_LIST_DIR}/src/win32_clock_gettime.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_pthread_cond_broadcast.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_pthread_cond_destroy.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_pthread_cond_init.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_pthread_cond_signal.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_pthread_cond_timedwait.c			
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_pthread_cond_wait.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_pthread_getspecific.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_pthread_key_create.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_pthread_key_delete.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_pthread_mutex_destroy.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_pthread_mutex_init.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_pthread_mutex_lock.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_pthread_mutex_trylock.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_pthread_mutex_unlock.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_pthread_self.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_pthread_setspecific.c				
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_gmtime_r.c					
	${CMAKE_CURRENT_LIST_DIR}/src/httplib_localtime_r.c					
	${CMAKE_CURRENT_LIST_DIR}/src/lh_ipt_to_ip.c						
	${CMAKE_CURRENT_LIST_DIR}/src/lh_ipt_to_ip4.c						
	${CMAKE_CURRENT_LIST_DIR}/src/lh_ipt_to_ip6.c						
	${CMAKE_CURRENT_LIST_DIR}/src/wince_rename.c						
	${CMAKE_CURRENT_LIST_DIR}/src/wince_stat.c						
	${CMAKE_CURRENT_LIST_DIR}/src/wince_strftime.c					
	${CMAKE_CURRENT_LIST_DIR}/src/wince_time.c
)

target_compile_definitions(${PROJECT_NAME}
  PRIVATE
    _GNU_SOURCE
    USE_STACK_SIZE=102400
)

target_compile_options(${PROJECT_NAME}
    PRIVATE
    -Wall 
	-Wextra 
	-Wstrict-prototypes 
	-Wshadow 
	-Wpointer-arith 
	-Wformat-security 
	-Winit-self 
	-Wcast-qual 
	-Wcast-align 
	-Wwrite-strings 
	-Wnested-externs 
	-Wredundant-decls 
	-Werror
	-funsigned-char     
)

target_include_directories(${PROJECT_NAME} 
    PUBLIC
    ${PROJECT_SOURCE_DIR}/include
)
